# libwinapi_ncurses

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  library.cpp  library.h
example/: example.cpp
src/: color.h  colors.h  keys.h  wrapper.cpp  wrapper.h
